--- a/helpdesk/public/Style.css
+++ b/helpdesk/public/Style.css
@@ -1,4 +1,18 @@
 body {
+
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 3px;
+    height: 30px;
+}
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
 }
 
 .sidenav {
@@ -54,4 +68,20 @@ body {
 #ticket_list div {
     background-color: lightslategrey;
     padding: 5px;
+}
+
+#add_ticket textarea {
+    resize: none;
+    width: 100%;
+    height: 200px;
+}
+
+#add_ticket input {
+    width: 100%;
+    height: 100%;
+}
+
+#priority {
+    width: 200px;
+    height: 100%;
 }
