--- a/helpdesk/public/Style.css
+++ b/helpdesk/public/Style.css
@@ -86,23 +86,24 @@ table {
             background-color: #f1f1f1;
         }
 
-#add_ticket { }
+#add_ticket {
+
+}
 
     #add_ticket textarea {
         resize: none;
         width: 100%;
         height: 200px;
+        display: block;
+        box-sizing: border-box;
     }
 
-    #add_ticket input {
+    #add_ticket input, select {
         width: 100%;
         height: 100%;
+        display: block;
+        box-sizing: border-box;
     }
-
-#priority {
-    width: 200px;
-    height: 100%;
-}
 
 @keyframes moveToRight {
     0% {
