--- a/helpdesk/public/Style.css
+++ b/helpdesk/public/Style.css
@@ -70,21 +70,21 @@ table {
     color: #f1f1f1;
 }
 
-#ticket_list { }
+.ticketList { }
 
-    #ticket_list td {
+    .ticketList td {
         background-color: lightslategrey;
         padding: 5px;
         color: #f1f1f1;
     }
 
-    #ticket_list th{
+    .ticketList th {
         cursor: pointer;
     }
 
-        #ticket_list tr:hover {
-            background-color: #f1f1f1;
-        }
+    .ticketList tr:hover {
+        background-color: #f1f1f1;
+    }
 
 #add_ticket {
 
