--- a/helpdesk/public/Style.css
+++ b/helpdesk/public/Style.css
@@ -12,7 +12,15 @@ td, th {
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    width: 100%;
+    width: 50%;
+    margin: auto;
+}
+
+h2 {
+    margin: auto;
+    width: fit-content;
+    margin-bottom: 15px;
+    margin-top: 15px;
 }
 
 .sidenav {
