--- a/helpdesk/public/Style.css
+++ b/helpdesk/public/Style.css
@@ -1,5 +1,6 @@
 body {
     background-color:cadetblue;
+    margin:0;
 }
 
 td, th {
@@ -52,7 +53,7 @@ h2 {
 /* Style page content */
 .main {
     margin-left: 200px; /* Same as the width of the sidebar */
-    padding: 0px 10px;
+    padding: 0px;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
@@ -66,9 +67,33 @@ h2 {
         }
 }
 
+.topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+
+    .topnav a {
+        float: left;
+        color: #f2f2f2;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+    }
+
+        .topnav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        .topnav a.active {
+            background-color: #04AA6D;
+            color: white;
+        }
+
 .tabcontent {
     display: none;
-    padding: 6px 12px;
+    padding: 0px 0px;
     border: 1px solid #ccc;
     border-top: none;
 }
