--- a/helpdesk/public/Style.css
+++ b/helpdesk/public/Style.css
@@ -174,6 +174,10 @@ h2 {
     box-sizing: border-box;
 }
 
+#edit_user_password {
+margin-top:35px;
+}
+
 @keyframes moveToRight {
     0% {
         transform: translateY(-100%);
