--- a/helpdesk/public/Style.css
+++ b/helpdesk/public/Style.css
@@ -1,5 +1,5 @@
 body {
-    background-color:cadetblue;
+    background-color:#7395AE;
     margin:0;
 }
 
@@ -12,7 +12,8 @@ td, th {
 
 table {
     font-family: arial, sans-serif;
-    border-collapse: collapse;
+    border-collapse: separate;
+    border-spacing:0px 10px;
     width: 50%;
     margin: auto;
 }
@@ -175,15 +176,43 @@ h2 {
 }
 
 #edit_user_password {
-margin-top:35px;
+    margin-top:35px;
 }
 
-@keyframes moveToRight {
+#popup {
+    display: block;
+    position: fixed;
+    right: -100%;
+    bottom: 25px;
+    padding: 20px 30px;
+    background-color:darkseagreen;
+    border-radius: 5px;
+}
+
+#popup_text {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:20px;
+}
+
+.popup_animation {
+    animation-name: moveToLeft;
+    animation-duration: 10s;
+}
+
+@keyframes moveToLeft {
     0% {
-        transform: translateY(-100%);
+        right: -100%;
+    }
+
+    5% {
+        right: 25px;
+    }
+
+    90% {
+        right: 25px;
     }
 
     100% {
-        transform: translateY(0%);
+        right: -100%;
     }
 }
