--- a/helpdesk/public/Style.css
+++ b/helpdesk/public/Style.css
@@ -1,6 +1,6 @@
 body {
-    background-color:#7395AE;
-    margin:0;
+    background-color: #9ebace;
+    margin: 0;
 }
 
 td, th {
@@ -12,8 +12,7 @@ td, th {
 
 table {
     font-family: arial, sans-serif;
-    border-collapse: separate;
-    border-spacing:0px 10px;
+    border-collapse: collapse;
     width: 50%;
     margin: auto;
 }
@@ -102,20 +101,68 @@ h2 {
     color: #f1f1f1;
 }
 
-.list { }
+.list {
+    border-collapse: separate;
+    border-spacing: 0px 19px;
+    width: 75%;
+}
+
+    .list tr {
+        border-radius: 15px;
+        background-color: #a0c2db;
+        box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
+    }
+
+        .list tr:hover {
+            animation-name: hoverBright;
+            animation-duration: 0.25s;
+            filter: brightness(110%);
+        }
 
     .list td {
-        background-color: lightslategrey;
-        padding: 5px;
+        border: none;
+        background-color: #5D5C61;
+        padding: 10px 15px;
         color: #f1f1f1;
+        border-left: 1px solid #7e7e7e;
     }
+        .list td:first-child {
+            border:none;
+            border-top-left-radius: 7px;
+            border-bottom-left-radius: 7px;
+        }
+
+        .list td:last-child {
+            border-bottom-right-radius: 7px;
+            border-top-right-radius: 7px;
+        }
 
     .list th {
+        padding: 10px 15px;
         cursor: pointer;
+        border: none;
+        border-left: 1px solid #86a1b9;
     }
+        .list th:first-child {
+            border: none;
+            border-top-left-radius: 7px;
+            border-bottom-left-radius: 7px;
+        }
 
-    .list tr:hover {
-        background-color: #f1f1f1;
+        .list th:last-child {
+            border-bottom-right-radius: 7px;
+            border-top-right-radius: 7px;
+        }
+
+    .list button {
+        width: 100%;
+        background-color: #5d5c61;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
     }
 
 .imgbutton {
@@ -142,9 +189,11 @@ h2 {
     text-align:center;
 }
 
-.ani {
-    animation-name: moveToRight;
-    animation-duration: 1s;
+.label_title {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    display: block;
+    text-align: center;
 }
 
 #add_ticket { }
@@ -214,5 +263,15 @@ h2 {
 
     100% {
         right: -100%;
+    }
+}
+
+@keyframes hoverBright {
+    0% {
+        filter: brightness(100%);
+    }
+
+    100% {
+        filter: brightness(110%);
     }
 }
